classDiagram
    class User {
        +id
        +email
        +passwordHash
        +status
        +mustChangePassword
    }

    class Role {
        +id
        +name
    }

    class StudentProfile {
        +studentNumber
        +fullName
        +program
        +currentSemester
    }

    class TeacherProfile {
        +employeeNumber
        +fullName
        +department
    }

    class AdminProfile {
        +employeeNumber
        +fullName
        +title
    }

    class Department {
        +code
        +name
    }

    class Program {
        +code
        +name
        +degreeLevel
    }

    class Course {
        +code
        +title
        +creditHours
        +ectsCredits
    }

    class CourseOffering {
        +sectionCode
        +deliveryMode
        +capacity
        +status
    }

    class Enrollment {
        +status
        +registeredAt
    }

    class AttendanceSession {
        +sessionDate
        +topic
    }

    class AttendanceRecord {
        +status
        +markedAt
    }

    class GradeComponent {
        +title
        +weight
    }

    class FinalGrade {
        +letterGrade
        +gradePoint
        +publishedAt
    }

    class StudentInvoice {
        +invoiceNumber
        +status
        +totalAmount
        +dueDate
    }

    class Payment {
        +referenceNumber
        +status
        +amount
    }

    class Club {
        +name
        +status
    }

    class NewsPost {
        +title
        +status
        +publishedAt
    }

    class CampusEvent {
        +title
        +startsAt
        +location
    }

    class Notification {
        +title
        +type
        +priority
    }

    User "1" --> "*" Role : assigned
    User "1" --> "0..1" StudentProfile : owns
    User "1" --> "0..1" TeacherProfile : owns
    User "1" --> "0..1" AdminProfile : owns
    Department "1" --> "*" Program : contains
    Department "1" --> "*" TeacherProfile : employs
    Program "1" --> "*" StudentProfile : enrolls
    Program "*" --> "*" Course : curriculum
    Course "1" --> "*" CourseOffering : scheduled as
    TeacherProfile "1" --> "*" CourseOffering : teaches
    StudentProfile "1" --> "*" Enrollment : requests
    CourseOffering "1" --> "*" Enrollment : accepts
    CourseOffering "1" --> "*" AttendanceSession : has
    AttendanceSession "1" --> "*" AttendanceRecord : records
    Enrollment "1" --> "*" AttendanceRecord : tracks
    CourseOffering "1" --> "*" GradeComponent : defines
    GradeComponent "1" --> "*" FinalGrade : contributes to
    Enrollment "1" --> "0..1" FinalGrade : results in
    StudentProfile "1" --> "*" StudentInvoice : billed by
    StudentInvoice "1" --> "*" Payment : paid by
    StudentProfile "*" --> "*" Club : joins
    NewsPost "*" --> "*" Role : visible to
    CampusEvent "*" --> "*" Role : visible to
    User "1" --> "*" Notification : receives
